alchemy/static/css/style_extra.css
figcaption {
    text-align: center;
    font-size: smaller;
    font-style: italic;
}

figure img {
    display:block;
    margin-left: auto;
    margin-right: auto;
}

figure video {
    display:block;
    margin-left: auto;
    margin-right: auto;
}

